--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Fever Records - About</title>
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/util.css" />
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/about.css" />
   </head>
   <body>
     <!-- HEADER -->
     <header>
-      <h1><a href="index.html">TITE</a></h1>
+      <h1><a href="index.html">FEVER</a></h1>
       <!-- NAV LINKS -->
       <nav>
         <a href="index.html">HOME</a>
@@ -20,26 +20,86 @@
         <a href="faq.html">FAQ</a>
       </nav>
     </header>
+
     <main>
-      <!-- ABOUT HERO -->
-      <section>about hero</section>
-      <!-- OUR STORY HAHAHAHA -->
-      <section>our sotry</section>
-      <!-- MISSION AND VISION??? -->
-      <section>mission</section>
-      <!-- CTA -->
-      <section><button class="btn">click</button></section>
+      <!-- HERO SECTION -->
+      <section class="hero">
+        <div class="hero-content">
+            <h1 class="hero-title">About us</h1>
+        </div>
+      </section>
+
+       <!-- OUR STORY SECTION -->
+       <section class="how-section">
+        <div class="section-content">
+            <h2 class="section-title">Our Story</h2>
+            <p class="story-paragraph">
+                Founded in 2025 by a group of passionate music enthusiasts, Fever Records started as a small collection shared among friends. 
+                The goal was simple: to bring rare and beloved albums back into circulation. As word spread, so did our collection. 
+                We began sourcing from estate sales, record fairs, and direct contributions from the community, expanding our catalog to cover 
+                diverse genres and eras. Today, Fever Records is a hub for both seasoned collectors and newcomers to the vinyl world. 
+                We continue to grow, adding new releases and hidden gems while maintaining our commitment to quality.
+            </p>
+        </div>
+    </section>
+
+
+    <!-- MISSION AND VALUES SECTION -->
+    <section class="why-section">
+        <div class="section-content">
+            <h2 class="section-title">Our Mission & Values</h2>
+            <div class="mission-values">
+                <div class="mission-value-item">
+                    <h3>Passion for Music</h3>
+                    <p>At Fever Records, we believe music is an experience. We curate a selection of vinyl that celebrates the warmth, 
+                      depth, and artistry that only records can provide.
+                    </p>
+                </div>
+                <div class="mission-value-item">
+                    <h3>Quality & Authenticity</h3>
+                    <p>We are committed to offering authentic, high-quality vinyl records. Every item is carefully sourced and inspected to 
+                      ensure you receive the best listening experience.
+                    </p>
+                </div>
+                <div class="mission-value-item">
+                    <h3>Community</h3>
+                    <p>We foster a community of music lovers, collectors, and enthusiasts. Join us in appreciating the culture and 
+                      craft surrounding vinyl records.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- TEAM SECTION -->
+    <section class="how-section">
+        <div class="section-content"> <!-- Wrapper for centered content -->
+            <h2 class="section-title">Meet the Team</h2>
+            <div class="team-members">
+                <div class="team-member">
+                    <h3>George D.</h3>
+                    <p>Founder.</p>
+                </div>
+                <div class="team-member">
+                    <h3>Dutch C.</h3>
+                    <p>Founder.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     </main>
+    
     <!-- FOOTER -->
     <footer>
-      <p>© 2025 TITE. All rights reserved.</p>
+      <p>© 2025 Fever Records. All rights reserved.</p>
       <nav>
         <a href="index.html">HOME</a> | <a href="products.html">PRODUCTS</a> |
         <a href="about.html">ABOUT</a> |
         <a href="faq.html">FAQ</a>
       </nav>
       <p class="disclaimer">
-        Drink ng medyo responsible. This website is just for a machine project
+        Parental Advisory: Explicit Content. This website is just for a machine project
         :>
       </p>
     </footer>
