--- a/faq.html
+++ b/faq.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Fever Records - FAQ</title>
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/util.css" />
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/faq.css" />
   </head>
   <body>
     <!-- HEADER -->
     <header>
-      <h1><a href="index.html">TITE</a></h1>
+      <h1><a href="index.html">FEVER</a></h1>
       <!-- NAV LINKS -->
       <nav>
         <a href="index.html">HOME</a>
@@ -21,22 +21,105 @@
       </nav>
     </header>
     <main>
-      <section>
-        <h2></h2>
-        <!-- FAQS -->
-        <div></div>
+
+      <!-- HERO SECTION -->
+      <section class="hero">
+          <div class="hero-content">
+              <h1 class="hero-title">Frequently Asked Questions</h1>
+          </div>
       </section>
-    </main>
+
+      <!-- ORDERING & SHIPPING SECTION -->
+      <section class="how-section">
+          <h2 class="section-title">Ordering & Shipping</h2>
+          <div class="steps card-container">
+              
+              <div class="step card">
+                  <div class="card-title">
+                      <h3>How long does shipping take?</h3>
+                  </div>
+                  <p>Most orders ship within 1-2 business days. Delivery time depends on your location: Domestic orders typically take 3-5 business days, while international orders take 7-14 business days.</p>
+              </div>
+
+              <div class="step card">
+                  <div class="card-title">
+                      <h3>Do you ship internationally?</h3>
+                  </div>
+                  <p>Yes! We ship worldwide. International shipping rates are calculated at checkout. Please note that international orders may be subject to customs fees.</p>
+              </div>
+
+              <div class="step card">
+                  <div class="card-title">
+                      <h3>What if my vinyl arrives damaged?</h3>
+                  </div>
+                  <p>We pack our records with extreme care, but if your order arrives damaged, please contact us within 7 days with photos of the damage. We'll send a replacement at no extra cost.</p>
+              </div>
+
+          </div>
+      </section>
+
+      <!-- PRODUCTS SECTION -->
+      <section class="why-section"> 
+          <h2 class="section-title">Products</h2>
+          <div class="review-container">
+
+              <div class="step card">
+                  <div class="card-title">
+                      <h3>What's the difference between new & used vinyl?</h3>
+                  </div>
+                  <p>New vinyl is sealed and unplayed. Used vinyl is pre-owned and graded (Mint, Near Mint, Very Good, Good, Fair) based on condition. All used records are cleaned and tested before shipping.</p>
+              </div>
+
+              <div class="step card">
+                  <div class="card-title">
+                      <h3>Do you accept trade-ins?</h3>
+                  </div>
+                  <p>Currently, we do not offer trade-ins. However, we always buy back rare and valuable records. Contact us for an appraisal.</p>
+              </div>
+
+              <div class="step card">
+                  <div class="card-title">
+                      <h3>Are your records authentic?</h3>
+                  </div>
+                  <p>Absolutely. We guarantee all records are original pressings from official labels. We do not sell reissues or bootlegs unless clearly marked.</p>
+              </div>
+
+          </div>
+      </section>
+
+      <!-- RETURNS & REFUNDS SECTION -->
+      <section class="how-section">
+          <h2 class="section-title">Returns & Refunds</h2>
+          <div class="steps card-container">
+
+              <div class="step card">
+                  <div class="card-title">
+                      <h3>What's your return policy?</h3>
+                  </div>
+                  <p>You may return unopened, new records within 30 days of delivery for a full refund. Used records are final sale. Items must be in original condition with shrink wrap intact (if applicable).</p>
+              </div>
+
+              <div class="step card">
+                  <div class="card-title">
+                      <h3>How do I initiate a return?</h3>
+                  </div>
+                  <p>Contact us via the contact page with your order number and reason for return. We'll provide a return shipping label and instructions. Return shipping costs are the customer's responsibility.</p>
+              </div>
+
+          </div>
+      </section>
+
+  </main>
     <!-- FOOTER -->
     <footer>
-      <p>© 2025 TITE. All rights reserved.</p>
+      <p>© 2025 Fever Records. All rights reserved.</p>
       <nav>
         <a href="index.html">HOME</a> | <a href="products.html">PRODUCTS</a> |
         <a href="about.html">ABOUT</a> |
         <a href="faq.html">FAQ</a>
       </nav>
       <p class="disclaimer">
-        Drink ng medyo responsible. This website is just for a machine project
+        Parental Advisory: Explicit Content. This website is just for a machine project
         :>
       </p>
     </footer>
